# ROS-GAZEBO-DRONE-BR

./: CMakeLists.txt  GAZEBO-MODELOS.md  README.md  package.xml
vant3D_gazebo/: CMakeLists.txt  package.xml
vant3D_gazebo/launch/: vant3d.launch
vant3D_gazebo/models/canon/: model.sdf
vant3D_gazebo/models/risers/: model.config  model.sdf
vant3D_gazebo/models/velodyne_hdl32/: model.sdf
vant3D_gazebo/models/wall_of_risers/meshes/: Parede_lisa.dae
vant3D_gazebo/src/: velodyne_plugin.cc  velodyne_plugin.cpp
vant3D_gazebo/worlds/: camera.world  velodyne.world
vant3d_description/: CMakeLists.txt  package.xml
vant3d_description/urdf/: component_snippets.xacro  iris.xacro  iris_base.xacro  m600.xacro  m600_base.xacro  mav_generic_odometry_sensor.gazebo  multirotor_base.xacro
vant3d_gazebo/: .ignore  CMakeLists.txt  package.xml
vant3d_gazebo/launch/: diff_wheeled_gazebo.launch  mav_vant3d.launch  spawn_mav.launch  vant3d.launch  vant3d_camera.launch
vant3d_gazebo/models/canon/: model.config  model.sdf
vant3d_gazebo/models/parede_lisa/: Parede_lisa.dae  model.config  model.sdf  parede_lisa.dae
vant3d_gazebo/models/risers/: model.sdf
vant3d_gazebo/models/sea_surface/: model.sdf
vant3d_gazebo/models/sea_surface/materials/scripts/: waves.material
vant3d_gazebo/resources/: lee_controller_m600.yaml  m600.yaml
vant3d_gazebo/src/: edge_detection_gazebo.cpp  opencv_demo.cpp  velocidade_velodyne.cc
vant3d_gazebo/src/camera/: animated_camera.cc  camera_move.cc  camera_move.cpp  camera_move.h  camera_move_pose.cpp  camera_registra_foto.cpp  path_publisher.cc  path_publisher.cpp
vant3d_gazebo/src/camera/compressed_image_transport/: compressed_publisher.cpp  compressed_publisher.h  compressed_subscriber.cpp  compressed_subscriber.h  compression_common.h  manifest.cpp
vant3d_gazebo/src/controller/: vant3d_controller.cpp  vant3d_controller.h
vant3d_gazebo/urdf/: diff_wheeled_robot.xacro  robot.urdf
vant3d_gazebo/worlds/: camera.world  diff_wheeled_gazebo.launch  logical_camera.world  teste_camera.world  teste_move.world  velodyne.world
