<package>
    <name>vant3d_gazebo</name>
    <version>1.0.0</version>
    <description>The rotors_gazebo_demos package</description>

    <maintainer email="diogo.oliveira@labmetro.ufsc.br">Diogo Henrique</maintainer>

    <author>Fadri Furrer</author>
    <author>Michael Burri</author>
    <author>Mina Kamel</author>
    <author>Janosch Nikolic</author>
    <author>Markus Achtelik</author>

    <license>ASL 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>roscpp</run_depend>

</package>