<package>
    <name>vant3d_gazebo</name>
    <version>1.0.0</version>
    <description>The rotors_gazebo_demos package</description>

    <maintainer email="diogo.oliveira@labmetro.ufsc.br">Diogo Henrique</maintainer>
    <maintainer email="daniel.regner@labmetro.ufsc.br">Daniel Regner</maintainer>

    <author>Daniel Regner</author>
    <author>Diogo Henrique</author>
    <author>Daniel Regner</author>
    <author>Diogo Henrique</author>
    <author>Daniel Regner</author>
    <author>Diogo Henrique</author>
    <author>Daniel Regner</author>
    <author>Diogo Henrique</author>

    <license>ASL 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>gazebo_plugins</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>mav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rotors_gazebo_plugins</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>gazebo_msgs</run_depend>
    <run_depend>gazebo_plugins</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>joy</run_depend>
    <run_depend>mav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>xacro</run_depend>

    <!-- TODO: Ajustar os pacotes -->
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>pcl_conversions</build_export_depend>
    <build_export_depend>pcl_msgs</build_export_depend>
    <build_export_depend>pcl_ros</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_msgs</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

</package>